[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 80
exclude = "topography/utils/externals"

[tool.pylint.message_control]
disable = "R0913, R0902"

[tool.pylint.typecheck]
ignored-modules = "torch"

[tool.pylint.format]
max-line-length = 80

[tool.pylint.master]
ignore = "topography/utils/externals"
fail-under = 9

[tool.pytest.ini_options]
addopts = "--verbose --cov=topography --cov-report=html --cov-report=term:skip-covered -W ignore::DeprecationWarning"
testpaths = ["tests", "topography"]

[tool.coverage.run]
branch = false
omit = ["topography/utils/externals/*"]