[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "topography"
version = "1.0.0"
description = "Introducing topography in convolutional neural networks."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [{name = "Maxime Poli"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = ["dependencies"]

[project.urls]
homepage = "https://bootphon.github.io/topography"
repository = "https://github.com/bootphon/topography"

[project.optional-dependencies]
testing = [
    "pytest",
    "pytest-cov"
]
dev = [
    "ipykernel",
    "black",
    "isort",
    "flake8",
    "pylint",
]

[tool.setuptools]
packages = ["topography"]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[tool.black]
line-length = 80
exclude = "topography/utils/externals"

[tool.isort]
line_length = 80
profile = "black"
known_first_party = ["topography"]

[tool.pylint.message_control]
disable = "R0913, R0902"

[tool.pylint.typecheck]
ignored-modules = "torch"

[tool.pylint.format]
max-line-length = 80

[tool.pylint.master]
ignore = "topography/utils/externals"
fail-under = 9

[tool.pytest.ini_options]
addopts = "--verbose --cov=topography --cov-report=html --cov-report=term:skip-covered -W ignore::DeprecationWarning"
testpaths = ["tests", "topography"]

[tool.coverage.run]
branch = false
omit = ["topography/utils/externals/*"]